# claude-rs

./: .gitignore  ALL_PROMPTS.md  ALL_PROMPTS_PDF.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RUST_TS_PARITY_GAPS.md  SESSION_LOG.md  clippy.toml  feature-gap-analysis.md  prompts_part1_tools.md  prompts_part2_commands_hooks.md  prompts_part3_services_skills.md  prompts_part4_utils_query_constants.md  prompts_part5_components_bridge_rest.md  rustfmt.toml
crates/claude-cli/: Cargo.toml
crates/claude-cli/src/: main.rs
crates/claude-cli/tests/: cli_test.rs
crates/claude-core/: Cargo.toml
crates/claude-core/src/: advisor.rs  agent_creation_prompt.rs  agent_definition.rs  agent_fork_prompt.rs  agent_id.rs  agent_summary.rs  api_preconnect.rs  app_state.rs  argument_substitution.rs  attachment_messages.rs  auto_dream.rs  auto_mode_critique_prompt.rs  auto_mode_denials.rs  away_summary_prompt.rs  batch_skill_prompt.rs  binary_check.rs  browser.rs  buddy.rs  cache_paths.rs  cache_safe_params.rs  circular_buffer.rs  claude_api_skill_prompt.rs  claude_code_hints.rs  claude_in_chrome_prompts.rs  cli_args.rs  combined_cancel.rs  command_adapter.rs  command_prompt_snippets.rs  command_trait.rs  config_constants.rs  content_array.rs  control_message_compat.rs  debug_filter.rs  debug_skill_prompt.rs  detect_repository.rs  diag_logs.rs  display_tags.rs  embedded_tools.rs  env_validation.rs  errors_util.rs  (+95 more)
crates/claude-core/src/analytics/: analytics_test.rs  mod.rs  tracker.rs  types.rs
crates/claude-core/src/api/: accumulator.rs  claude_proxy.rs  client.rs  mod.rs  normalize.rs  retry.rs  sse.rs
crates/claude-core/src/auth/: login.rs  mod.rs  pkce.rs  profile.rs  resolve.rs  storage.rs
crates/claude-core/src/bridge/: api.rs  capacity_wake.rs  config.rs  direct_connect.rs  flush_gate.rs  inbound_attachments.rs  inbound_messages.rs  jwt_utils.rs  messaging.rs  mod.rs  permission_callbacks.rs  poll_config.rs  protocol.rs  server.rs  session_id_compat.rs  trusted_device.rs  types.rs  work_secret.rs
crates/claude-core/src/commands/: builtin.rs  mod.rs  registry.rs
crates/claude-core/src/compact/: compactor.rs  mod.rs  prompt.rs
crates/claude-core/src/config/: global.rs  mod.rs  paths.rs  settings.rs
crates/claude-core/src/constants/: api_limits.rs  betas.rs  common.rs  cyber_risk.rs  display.rs  files.rs  github_app.rs  keys.rs  messages.rs  mod.rs  oauth.rs  product.rs  system_prompt_sections.rs  tool_limits.rs
crates/claude-core/src/context/: environment.rs  git.rs  git_settings.rs  mod.rs  system_prompt.rs  ts_static_prompt.rs
crates/claude-core/src/cost/: tracker.rs
crates/claude-core/src/file_history/: mod.rs  tracker.rs
crates/claude-core/src/hooks/: aggregation.rs  compact_hooks.rs  hook_events.rs  matching.rs  mod.rs  runner.rs  ssrf.rs  tool_hooks.rs  types.rs
crates/claude-core/src/keybindings/: defaults.rs  loader.rs  matching.rs  mod.rs  parser.rs  reserved.rs  resolver.rs  validate.rs
crates/claude-core/src/lsp/: client.rs  manager.rs  mod.rs  types.rs
crates/claude-core/src/mcp/: auth_cache.rs  auth_failure.rs  client.rs  datetime_parser.rs  elicitation_validation.rs  errors.rs  helpers.rs  in_process_transport.rs  instructions_delta.rs  lifecycle.rs  manager.rs  mod.rs  output_storage.rs  result_transform.rs  types.rs  xaa_idp.rs
crates/claude-core/src/memdir/: age.rs  daily_log_prompt.rs  entrypoint.rs  mod.rs  paths.rs  prompt.rs  scan.rs  searching_past_context.rs  team_mem_paths.rs  types.rs
crates/claude-core/src/messages_fold/: collapse_background_bash.rs  collapse_hook_summaries.rs  context_analysis.rs  group_tool_uses.rs  in_process_teammate_helpers.rs  process_text_prompt.rs
crates/claude-core/src/migrations/: mod.rs  model_aliases.rs  repl_bridge.rs  settings_moves.rs
crates/claude-core/src/permissions/: evaluator.rs  filesystem.rs  (+4 more)
crates/claude-core/tests/: accumulator_test.rs  api_client_test.rs  auth_test.rs  bridge_test.rs  commands_test.rs  compact_test.rs  config_test.rs  context_test.rs  cost_test.rs  events_test.rs  file_history_test.rs  hooks_test.rs  integration_test.rs  mcp_test.rs  normalize_test.rs  permissions_test.rs  plugins_test.rs  query_engine_test.rs  retry_test.rs  session_test.rs  sse_test.rs  systems_integration_test.rs  tool_executor_test.rs  types_test.rs
crates/claude-tools/: Cargo.toml
crates/claude-tools/src/: agent_tool.rs  ask_user.rs  bash.rs  bash_commands.rs  bash_sandbox_prompt.rs  bash_security.rs  brief_tool.rs  command_semantics.rs  config_tool.rs  cron_tool.rs  ctx_inspect_tool.rs  destructive_command_warning.rs  diff_utils.rs  edit.rs  edit_quote_style.rs  git_diff.rs  glob_tool.rs  grep.rs  lib.rs  list_peers_tool.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_resource_tools.rs  mcp_tool.rs  monitor_tool.rs  notebook_edit.rs  plan_mode.rs  powershell.rs  powershell_command_semantics.rs  push_notification_tool.rs  read.rs  read_only_validation.rs  registry.rs  remote_trigger.rs  repl_tool.rs  sed_validation.rs  send_message.rs  send_user_file_tool.rs  skill_tool.rs  sleep_tool.rs  (+20 more)
crates/claude-tools/tests/: agent_tool_test.rs  ask_user_test.rs  auto_classifier_input_test.rs  bash_test.rs  build_test.rs  config_tool_test.rs  edit_test.rs  glob_test.rs  grep_test.rs  mcp_resource_integration_test.rs  misc_tools_test.rs  notebook_edit_test.rs  plan_mode_test.rs  read_test.rs  registry_test.rs  task_tools_test.rs  tool_search_test.rs  web_fetch_test.rs  write_test.rs
crates/claude-tui/: Cargo.toml
crates/claude-tui/src/: ansi.rs  app.rs  layout.rs  lib.rs  links.rs  markdown.rs  syntax.rs  theme.rs
crates/claude-tui/tests/: markdown_test.rs  message_list_test.rs  prompt_input_test.rs  tui_test.rs  ui_features_test.rs
(+115 files in other folders)
