[package]
name = "claude-cli"
version = "2.1.121"
edition = "2021"

[[bin]]
name = "claude-rs"
path = "src/main.rs"

[dependencies]
claude-core = { path = "../claude-core" }
claude-tools = { path = "../claude-tools" }
claude-tui = { path = "../claude-tui" }
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes = "1"
futures-util = "0.3"
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
