[package]
name = "claude-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
url = "2"
dirs = "6"
glob = "0.3"
hex = "0.4"
regex = "1"
urlencoding = "2"
open = "5"
once_cell = "1"
# G18b: WebSocket transport for ws / ws-ide MCP servers. Uses
# native-tls by default so wss:// URLs work with the system trust
# store (TS uses Node's built-in TLS; Rust's rustls would need a
# distinct webpki root bundle). `connect` only — no server
# surface — so the client features are sufficient.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Unix-only: graceful subprocess termination with SIGINT→SIGTERM→SIGKILL
# escalation (see `mcp::client::graceful_terminate_stdio`). `libc` is
# already a transitive dep; this pins it as a direct dep so the cfg-gated
# FFI call is explicit.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "time"] }
