[package]
name = "claude-tools"
version = "2.1.121"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
similar = "2"
glob = "0.3"
base64 = "0.22"
reqwest = { workspace = true, features = ["json", "stream"] }
once_cell = "1"
regex-lite = "0.1"
uuid.workspace = true
chrono.workspace = true
dirs = "6"
jsonschema = { version = "0.46.3", default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json.workspace = true
