[package]
name = "claude-tui"
version = "2.1.121"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
claude-tools = { path = "../claude-tools" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tokio-util = { version = "0.7", features = ["rt"] }
syntect = "5"
chrono.workspace = true
dirs = "6"
textwrap = "0.16"
unicode-width = "0.2"
uuid.workspace = true
